# yolov4test

./: CMakeLists.txt  README.md  hole.names  obj_det.hpp  object_detect.cpp
data/: hole.cfg
